Revert "Refactors for AvatarAPI Won't compile yet because AvatarAPI isn't on maven yet."
This reverts commit a24b6a1